Webinars styling changes

--- a/uSync/v16/Content/apr-22.config
+++ b/uSync/v16/Content/apr-22.config
@@ -27,7 +27,7 @@
     "expose": [],
     "Layout": {}
   },
-  "markup": "\u003Cp\u003EYou have different clinical goals at every stage of care. Advancements in laser therapy have led to a new approach to veterinary care: photoceuticals. Like pharmaceuticals, optimized to achieve a predictable response and superior outcomes. Using the right photoceutical tool at each stage of care allows you to meet your clinical goals throughout a complete plan of care.\u003C/p\u003E\u003Cp\u003EIn this webinar, Dr. James S. Gaynor will break down the science of photoceuticals and the practical applications of light in the veterinary practice. You will learn how to use different in-clinic and at-home photoceutical tools during every stage in the continuum of care\u003Cp\u003E\u003Cbr /\u003E\u003C/p\u003E\u003Cbr /\u003E"
+  "markup": "\u003Cp\u003EYou have different clinical goals at every stage of care. Advancements in laser therapy have led to a new approach to veterinary care: photoceuticals. Like pharmaceuticals, photoceuticals are prescribed doses of light, optimized to achieve a predictable response and superior outcomes. Using the right photoceutical tool at each stage of care allows you to meet your clinical goals throughout a complete plan of care.\u003C/p\u003E\u003Cp\u003EIn this webinar, Dr. James S. Gaynor will break down the science of photoceuticals and the practical applications of light in the veterinary practice. You will learn how to use different in-clinic and at-home photoceutical tools during every stage in the continuum of care, from relieving acute pain to healing tissue and maintaining relief in the long term.\u003C/p\u003E"
 }]]></Value>
     </description>
     <facebookDescription>
